Added text are and file&folder classes.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <title>vim with me</title>
     <link rel="stylesheet" href="src/css/style.css">
     <script type="module" src="terminal/main.js"></script>
+    <script type="module" src="terminal/mainFolder.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+    <article id="container">
+    </article>
 </body>
 
 </html>
