--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>vim with me</title>
+    <title>VIM(al)</title>
     <link rel="stylesheet" href="src/css/style.css">
     <script type="module" src="terminal/main.js"></script>
     <script type="module" src="terminal/mainFolder.js"></script>
     <script defer type="module" src="src/listeners/keybindings.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/ico" href="Vim.ico" />
 </head>
 
 <body>
