--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script defer type="module" src="src/listeners/keybindings.js"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/ico" href="Vim.ico" />
+    <link rel="icon" type="image/ico" href="src/img/Vim.ico" />
 </head>
 
 <body>
